# rdkc-rtmessage

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  cmake_install.cmake  rtBuffer.c  rtBuffer.h  rtConnection.c  rtConnection.h  rtDebug.c  rtDebug.h  rtEncoder.c  rtEncoder.h  rtError.c  rtError.h  rtLog.c  rtLog.h  rtMessage.c  rtMessage.h  rtMessageHeader.c  rtMessageHeader.h  rtSocket.c  rtSocket.h  rtVector.c  rtVector.h  rtmessage_xw4.patch  rtrouted.c  rtrouted.conf  rtrouted_default.conf  rtsend.c  rtsub.c  sample_recv.c  sample_req.c  sample_res.c  sample_send.c
dataProvider/: CMakeLists.txt  dmClient.cpp  dmClient.h  dmError.cpp  dmError.h  dmPropertyInfo.cpp  dmPropertyInfo.h  dmProvider.cpp  dmProvider.h  dmProviderDatabase.cpp  dmProviderDatabase.h  dmProviderHost.cpp  dmProviderHost.h  dmProviderInfo.cpp  dmProviderInfo.h  dmProviderOperation.h  dmQuery.h  dmQueryResult.cpp  dmQueryResult.h  dmUtility.h  dmValue.cpp  dmValue.h  dmValueType.h  dmcli.cpp  sample_provider_gen.cpp  sample_provider_wifi.cpp
dataProvider/data/: Device.DeviceControl.json  Device.DeviceInfo.Webpa.json  Device.DeviceInfo.X_RDKCENTRAL-COM_RFC.Feature.ManageableNotification.json  Device.DeviceInfo.X_RDKCENTRAL-COM_xOpsDeviceMgmt.RPC.Feature.HDR.json  Device.DeviceInfo.X_RDKCENTRAL-COM_xOpsDeviceMgmt.RPC.Feature.ManageableNotification.json  Device.DeviceInfo.X_RDKCENTRAL-COM_xOpsDeviceMgmt.RPC.Feature.OptimizedVideoProfile.json  Device.DeviceInfo.X_RDKCENTRAL-COM_xOpsDeviceMgmt.RPC.json  Device.DeviceInfo.json  Device.Services.CVR.json  Device.WiFi.json
